# SDL-template

./: CMakeLists.txt  Makefile  README.md  main.c
.github/workflows/: build-release.yml
